--- a/Music.html
+++ b/Music.html
@@ -27,17 +27,17 @@
             }
             .HomeLink{
                 position: absolute;
-                top: 110px;
+                top: 115px;
                 left: 130px;
             }
             .MusicLink{
                 position: absolute;
-                top: 110px;
+                top: 115px;
                 left: 190px;
             }
             .MerchLink{
                 position: absolute;
-                top: 110px;
+                top: 115px;
                 left: 270px;
             }
             .Youtube1{
@@ -47,12 +47,12 @@
             }
             .Youtube2{
                 position: relative;
-                top: 50px;
+                top: 30px;
                 left: 30px;
             }
             .Youtube3{
                 position: relative;
-                top: 75px;
+                top: 45px;
                 left: 30px;
             }
             .video1Size{
@@ -76,41 +76,42 @@
             .Title2{
                 color: white;
                 position: relative;
-                top: 60px;
-                left: 147px;
+                top: 40px;
+                left: 155px;
             }
             .Title3{
                 color: white;
                 position: relative;
-                top: 100px;
-                left: 147px;
+                top: 60px;
+                left: 155px;
             }
             .ContactInfo{
                 text-align: center;
                 position: absolute;
-                top: 1220px;
+                top: 1420px;
                 left: 150px;
             }
             .instaLogo{
                 position: absolute;
-                top: 1280px;
+                top: 1480px;
                 left: 150px;
             }
             .InstaLink{
                 position: absolute;
                 left: 190px;
-                top: 1280px;
+                top: 1480px;
             }
             .bcLogo{
                 position: absolute;
                 left: 130px;
-                top: 1310px;
+                top: 1510px;
             }
             .bcLink{
                 position: absolute;
-                top: 1310px;
+                top: 1510px;
                 left: 190px;
             }
+            
 
                         /* for computers */
             @media only screen and (min-width: 768px){
@@ -226,7 +227,7 @@
         </div>
         <h4 class = "Title1"> "What the Fuck" </h4>
         
-      <h2 class = "latest" style ="color:white">Latest From Nollie Dog</h2>
+      <h2 class = "latest" style ="color:white">Latest From Nollie Dog:</h2>
         <div class = "Youtube2">
             <iframe class = "video2Size" width="560" height="315" src="https://www.youtube.com/embed/1ej29oe6xz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
