--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 .NickText{
                     color: white;
                     position: relative;
-                    top: 80px;
+                    top: 70px;
                     left: 640px;
                 }
                 .JaydenTitle{
@@ -187,7 +187,7 @@
                 }
                 .Rene{
                     position: absolute;
-                    top: 170px;
+                    top: 200px;
                     left: 40px;
                     width: 200px;
                     height: 200px;
@@ -214,29 +214,29 @@
                     height: 200px;
                 }
                 .ContactInfo{
-                    position: absolute;
-                    top: 1080px;
-                    right: 590px;
+                    position: relative;
+                    top: 580px;
+                    left: 0px;
                 }
                 .instaLogo{
-                    position: absolute;
-                    top: 1130px;
-                    right: 670px;
+                    position: relative;
+                    top: 570px;
+                    left: 550px;
                 }
                 .InstaLink{
                     position: absolute;
-                    top: 1135px;
-                    right: 570px;
+                    top: 1130px;
+                    left: 600px;
                 }
                 .bcLogo{
                     position: absolute;
                     top: 1160px;
-                    right: 660px;
+                    left: 550px;
                 }
                 .bcLink{
                     position: absolute;
                     top: 1165px;
-                    right: 570px;
+                    left: 610px;
                 }
             }
         </style>
@@ -255,32 +255,35 @@
                     <img src="Rene.png" alt="This is Rene" width= 200px height =200px>
                 </div>
                 <p class = "ReneText">
-                    Rene got his start in the band in 2020. <br> started playing the drums and has since 
-                    <br>taken up the shaker when necessary for <br> acoustic performances. Aside from <br> percussion, Rene also
-                    plays the bass, <br> guitar, ukulele, and for a short time, <br>the trumpet. In the future, he plans to attend <br>
-                    culinary school.
+                    Rene got his start in the band in 2020. <br> He started playing the drums and has 
+                    <br>since taken up the shaker when necessary <br> for acoustic performances. Aside from <br> percussion, Rene also
+                    plays the bass, <br> guitar, ukulele, and for a short time, <br>the trumpet.
                 </p>
             <h3 class = "AngelTitle">Angel Gomez:</h3>
                 <div class = "Angel">
                     <img src="Angel.png" alt="This is Angel" width= 200px height =200px>
                 </div>
                 <p class = "AngelText">
-                    Angel Gomez sings and plays guitar<br> for the band. Practice is held at his house.<br> He is
-                    the brother to Nick Gomez and<br> the main transportation as well as funder <br>for the band. 
+                    Angel is the band's singer and lead guitar. <br> He founded the band in 2020 as a <br> way to continue his passion
+                    for music. <br> Aside from singing and guitar, Angel also <br> writes the lyrics to Nollie Dog's songs <br>
+                    and manages the band's gigs. 
                 </p>
             <h3 class = "NickTitle">Nick Gomez:</h3>
                 <div class = "Nick">
                     <img src="Nick.png" alt="This is Angel" width= 200px height =200px>
                 </div>
                 <p class = "NickText"> 
-                    pretend I wrote something
+                    Nick plays second guitar for the band and <br> lead guitar in Nollie Dog's spin off band <br> Nollie Puppy. He also
+                    acts as the band's <br> stylist for gigs. He and Angel are brothers <br> with Nick being the youngest of the two.
                 </p>
             <h3 class = "JaydenTitle">Jayden Edwards:</h3>
                 <div class = "Jayden">
                     <img src="Jayden.png" alt="This is Jayden" width= 200px height =200px>
                 </div>
                 <p class = "JaydenText"> 
-                    pretend I wrote something
+                    Jayden is a part time member of the band. <br> Initially starting off full time, he has since <br> stepped back
+                    to focus on school. While <br> in the band, he plays bass and can be seen <br> using a literal drill on the 
+                    instrument <br> to create the band's unique sound during gigs.
                 </p>
             <h4 class = "ContactInfo" style="color:white"> Check us out!</h4>
             <div class = "instaLogo">
