moved links for mobile

--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
             .HomeLink{
                 position: absolute;
                 top: 148px;
-                left: 140px;
+                left: 130px;
             }
             .MusicLink{
-                position: relative;
-                left: 180px;
+                position: absolute;
+                top: 148px;
+                left: 170px;
             }
             .MerchLink{
                 position: relative;
-                left: 270px;
+                left: 260px;
             }
             .ReneTitle{
                 color: white;
