--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 left: 130px;
             }
             .MusicLink{
-                position: absolute;
+                position: relative;
                 top: 148px;
                 left: 170px;
             }
