--- a/Merch.html
+++ b/Merch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Merch</title>
+        <title>Shows</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
@@ -27,28 +27,26 @@
             }
             .HomeLink{
                 position: absolute;
-                top: 130px;
-                left: 110px;
+                top: 148px;
+                left: 130px;
             }
             .MusicLink{
-                position: absolute;
-                top: 130px;
-                left: 160px;
+                position: relative;
+                left: 170px;
             }
             .MerchLink{
-                position: absolute;
-                top: 130px;
-                left: 240px;
+                position: relative;
+                
             }
             .formTitle{
                 position: relative;
-                left: 560px;
-                top: 300px;
+                left: 520px;
+                top: 190px;
             }
             .form{
                 position: relative;
-                left: 500px;
-                top: 310px;
+                left: 470px;
+                top: 200px;
             }
             .Qtext{
                 color: white;
@@ -63,29 +61,29 @@
                 color: white;
             }
             .ContactInfo{
-                position: relative;
-                top: 700px;
-                left: 650px;
+                text-align: center;
+                top: 450px;
+                left: 150px;
             }
             .instaLogo{
-                position: relative;
-                top: 660px;
-                left: 550px;
+                position: absolute;
+                top: 260px;
+                left: 150px;
             }
             .InstaLink{
-                position: relative;
-                left: 590px;
-                top: 670px;
+                position: absolute;
+                left: 190px;
+                top: 270px;
             }
             .bcLogo{
-                position: relative;
-                left: 530px;
-                top: 690px;
+                position: absolute;
+                left: 130px;
+                top: 290px;
             }
             .bcLink{
-                position: relative;
-                top: 700px;
-                left: 590px;
+                position: absolute;
+                top: 300px;
+                left: 190px;
             }
 
             @media only screen and (min-width: 768px){
@@ -96,7 +94,6 @@
                 }
                 .MusicLink{
                     position: relative;
-                    top: 0px;
                     left: 540px;
                 }
                 .MerchLink{
@@ -107,27 +104,27 @@
                 .ContactInfo{
                     position: absolute;
                     top: 1080px;
-                    right: 590px;
+                    right: 200px;
                 }
                 .instaLogo{
                     position: absolute;
                     top: 1130px;
-                    right: 670px;
+                    left: 500px;
                 }
                 .InstaLink{
                     position: absolute;
                     top: 1135px;
-                    right: 570px;
+                    left: 540px;
                 }
                 .bcLogo{
                     position: absolute;
                     top: 1160px;
-                    right: 660px;
+                    left: 490px;
                 }
                 .bcLink{
                     position: absolute;
                     top: 1165px;
-                    right: 570px;
+                    left: 550px;
                 }
             }
         </style>
@@ -138,31 +135,14 @@
     <body style="background-color: rgb(43, 40, 40);">
         <h1>The Nollie Dog Official Website</h1>
         <div class = "MusicLink"><a href="Music.html"> Our Music </a></div>
-        <div class = "MerchLink"><a href="Merch.html"> Merch </a></div>
+        <div class = "MerchLink"><a href="Merch.html"> Shows </a></div>
         <div class = "HomeLink"><a href="index.html"> Home </a></div>
 
-        <h3 class = "formTitle" style = "color:white">Order Form</h3>
-        <div class = "form">
-            <form action="orders.html" method="GET" enctype="multipart/form-data">
-            <div class = "Qtext">
-                <label for="quantity">Quantity</label>
-                <input type="quantity" name="quantity" id="quantity" required>
-            </div>
-            <div class = "Ntext">
-              <label for="name">Name</label>
-              <input type="text" name="name" id="name" required>
-            </div>
-            <div class = "Etext">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" required>
-            </div>
-            <div class = "Atext">
-                <label for="Address">Address</label>
-                <input type="Address" name="Address" id="Address" required>
-            </div>
-          <button type="submit">Submit</button>
-        </form>
-        </div>
+        <h2 style = "color: white;">Upcomming Shows:</h2>
+        <center> 
+            <h3 style = "color: white;">Klownski Lounge</h3>
+            <h4 style = "color: white;">151 East Second Street Pomona, CA</h4>
+        </center>
         
         <h4 class = "ContactInfo" style="color:white"> Check us out!</h4>
             <div class = "instaLogo">
