Renamed merch page to shows

--- a/Shows.html
+++ b/Shows.html
@@ -135,7 +135,7 @@
     <body style="background-color: rgb(43, 40, 40);">
         <h1>The Nollie Dog Official Website</h1>
         <div class = "MusicLink"><a href="Music.html"> Our Music </a></div>
-        <div class = "MerchLink"><a href="Merch.html"> Shows </a></div>
+        <div class = "MerchLink"><a href="Shows.html"> Shows </a></div>
         <div class = "HomeLink"><a href="index.html"> Home </a></div>
 
         <h2 style = "color: white;">Upcomming Shows:</h2>
