--- a/Music.html
+++ b/Music.html
@@ -218,7 +218,7 @@
     <body style="background-color: rgb(43, 40, 40);">
         <h1>The Nollie Dog Official Website</h1>
         <div class = "MusicLink"><a href="Music.html"> Our Music </a></div>
-        <div class = "MerchLink"><a href="Merch.html"> Merch </a></div>
+        <div class = "MerchLink"><a href="Shows.html"> Shows </a></div>
         <div class = "HomeLink"><a href="index.html"> Home </a></div>
 
         <h2> Our Most Popular Song: </h2>
