finishing moving show link

--- a/Shows.html
+++ b/Shows.html
@@ -36,7 +36,8 @@
             }
             .MerchLink{
                 position: relative;
-                left: 245px;
+                left: 247px;
+                top: -10px;
             }
             .ContactInfo{
                 text-align: center;
